<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.joget</groupId>
    <artifactId>wflow-shark</artifactId>
    <version>9.0-BETA2</version>
    <url>http://www.joget.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>        
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>6.2.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-shark-jakarta</artifactId>
            <version>${project.version}</version>
            <classifier>jakarta</classifier>
            <exclusions>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>shark-maven</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkscripting-standard</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkclientutilities-misc</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkinstancepersistence-dods</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkinstancepersistence-dodslayer</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkrepositorypersistence-dods</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharkrepositorypersistence-dodslayer</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>EnhydraShark</groupId>
                    <artifactId>sharklogging-standard</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>TogetherRelationalObjects</groupId>
                    <artifactId>dbmanager</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>TogetherApplicationFramework</groupId>
                    <artifactId>eaf-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>TogetherApplicationFramework</groupId>
                    <artifactId>eafconfreader</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>internal</id>
            <url>https://dev.joget.org/archiva/repository/internal</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://dev.joget.org/archiva/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>